<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.personaltrainerportal2.LoginActivity">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/login_tv_sign_in"
        android:textAlignment="center"
        android:textSize="36sp"/>


    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signIn"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="@string/prompt_user"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/Blogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="161dp"/>

</RelativeLayout>
