<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.personaltrainerportal2.PaymentActivity">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pmt_tv"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/ETamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pmt_amt_hint"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/signIn"
        app:layout_constraintLeft_toRightOf="@+id/signIn"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"/>

    <EditText
        android:id="@+id/ETcardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pmt_cardName_hint"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/ETamount"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0"/>

    <EditText
        android:id="@+id/ETcardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pmt_cardNumber_hint"
        android:inputType="number"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/ETcardName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <EditText
        android:id="@+id/ETexp"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:hint="@string/pmt_exp_hint"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/ETcvv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/ETcvv"
        app:layout_constraintTop_toTopOf="@+id/ETcardNumber"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/ETcvv"
        android:layout_width="268dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/pmt_cvv_hint"
        android:inputType="number"
        android:textSize="24sp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ETemail"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"/>

    <EditText
        android:id="@+id/ETemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="77dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="Submit"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/ETemail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"/>


</android.support.constraint.ConstraintLayout>
