<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.personaltrainerportal2.ClientActivity">

    <EditText
        android:id="@+id/ETname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:padding="16dp"
        android:singleLine="false"
        android:hint="@string/client_name_hint"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/ETaddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:padding="16dp"
        android:hint="@string/client_address_hint"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/ETphone"
        app:layout_constraintTop_toBottomOf="@+id/ETname"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ETname"/>

    <EditText
        android:id="@+id/ETphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:padding="16dp"
        android:hint="@string/client_phone_hint"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="47dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ETname"
        app:layout_constraintTop_toTopOf="@+id/ETaddress"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_camera"
        android:backgroundTint="@color/colorPrimaryDark"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="37dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/client_action_save"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="61dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="61dp"/>


</android.support.constraint.ConstraintLayout>
